// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Satellite component renders correctly with alternate props 1`] = `
<div
  className="satellite satellite-2-3"
  style={
    Object {
      "backgroundColor": "rgba(255, 205, 155, 0.5)",
      "boxShadow": "0 0 1rem rgba(255, 205, 155, 0.5)",
    }
  }
/>
`;

exports[`Satellite component renders correctly with default props 1`] = `
<div
  className="satellite satellite-1-1"
  style={
    Object {
      "backgroundColor": undefined,
      "boxShadow": undefined,
    }
  }
/>
`;
